--- a/src/components/Spans/Footer/Footer.css
+++ b/src/components/Spans/Footer/Footer.css
@@ -1,15 +1,26 @@
 .Footer {
-    padding: 30px;
+    /* Set position to bottom and define dimensions*/
+    width: 100%;
+    margin-top: 10px;
+    padding: 10px;
+    /* Allign internal items */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 10vh;
+    flex-wrap: wrap;
+    /* Style */
     background-color: #051520;
     color: #fff;
     font-family: "Poetsen One";
+}
+
+.clickable {
+    color: #fff;
+    text-decoration: none;
+}
+.clickable:hover {
+    cursor: pointer;
+    color: #11b5fc;
 }
 
 #with-love {
