--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
 
   /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87); */
-  background-color: #242424; */
+  background-color: #D4C2D6;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -73,7 +73,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 } */
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -84,4 +84,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
