--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
-/*
 #root {
-} 
-*/
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.content {
+  /* Force footer to bottom */
+  flex-grow: 1;
+  margin: 0 2rem;
+}
+
 
 /* .logo {
   height: 6em;
