--- a/src/components/Spans/SignInUpModal/SignInUpModal.css
+++ b/src/components/Spans/SignInUpModal/SignInUpModal.css
@@ -1,4 +1,5 @@
 .modal {
+    z-index: 1001; /* Make sure modal is above blurred overlay*/
     background-color: #fff;
     border-radius: 20px;
     display: flex;
@@ -13,6 +14,17 @@
     top:  50%;
     left: 50%;
     transform: translate(-50%,-50%);
+}
+
+/* For blurring background */
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    z-index: 1000; /* Ensure it is above other content */
 }
 
 #heading {
