--- a/src/components/Spans/UserHome/UserHome.css
+++ b/src/components/Spans/UserHome/UserHome.css
@@ -13,6 +13,14 @@
 .flex-bit {
   display: flex;
   align-items: center;
+
+}
+
+.swiper-bit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .swiper-container {
@@ -23,7 +31,8 @@
 .swiper-slide {
   width: 30rem;
   height: 30rem;
-  /* position: relative; */
+  display: flex;
+  align-items: center;
 }
 
 .swiper-slide img {
@@ -35,6 +44,49 @@
 .swiper-slide-shadow-left,
   .swiper-slide-shadow-right {
     display: none;
+}
+
+.not-canvas {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.905);
+  height: 20rem;
+  width: 100%;
+  border-radius: 30px;
+  font-family: "Poetsen One", cursive;
+  font-size: 2rem;
+  line-height: 4rem;
+  transition: 0.3s ease;
+}
+.not-canvas:hover {
+  color: #11b5fc;
+}
+
+/* Button component dones't let me change dimensions so here's this \('v')/ */
+.carousel-all button {
+  font-family: "Poetsen One", cursive;
+  font-size: 1.5rem;
+  width: 7rem;
+  height: 3rem;
+  background-color: #0D324D;
+  color: white;
+  border-radius: 30px;
+  border: none;
+  margin: 0 10px;
+  transition: color 0.5s ease;
+}
+.carousel-all button:hover {
+  background-color: #092234;
+  border: 3px inset #0D324D;
+  color: white;
+  border-radius: 30px;
+  border: none;
+  margin: 0 10px;
+  cursor: pointer;
+  /* From Google button */
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
 }
 
 /* .swiper_container {
